// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRelatedContent should render Story Promo components when given appropriate data 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

.emotion-4 {
  margin-bottom: 1rem;
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-4 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-4 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-4 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-4 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    padding-bottom: 1.5rem;
    margin-bottom: 2rem;
  }
}

@media (max-width: 37.5rem) {
  .emotion-4 {
    padding-bottom: 2rem;
    margin-bottom: 1rem;
  }
}

.emotion-7 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-7 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    margin-top: 0;
  }
}

.emotion-9 {
  margin: 0;
  padding: 0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-13 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-15 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-15 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    padding-right: 1rem;
  }
}

.emotion-18 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display: grid) {
  .emotion-18 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-18 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-18 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-18 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-18 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-18 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-18 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-21 {
  padding: 0.5rem 0 1rem;
}

@media (max-width: 62.9375rem) {
  .emotion-21 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

.emotion-21:last-child {
  border: none;
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-21 {
    padding: 0 0 1.5rem;
  }
}

.emotion-21:first-child {
  padding-top: 0;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-21:first-child {
    padding-top: 1rem;
  }
}

.emotion-21:last-child {
  padding-bottom: 0;
}

@supports (display: grid) {
  .emotion-21 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-21 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width: 80rem) {
    .emotion-21 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-23 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-23 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-23 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-23 {
      display: block;
    }
  }
}

.emotion-25 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-25 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-25 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-27 {
  position: relative;
}

.emotion-29 {
  height: 0;
  overflow: hidden;
  position: relative;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
  background-color: #F2F2F2;
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
}

@media (min-width: 25rem) {
  .emotion-29 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-29 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-30 {
  width: 100%;
  height: auto;
  object-fit: cover;
}

@media (min-width: 25rem) {
  .emotion-31 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-31>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width: 24.9375rem) {
  .emotion-31>* {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-33 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-33 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-33 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-33 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-33 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-35 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-35 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-35 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-37 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-37:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-37:hover,
.emotion-37:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-37:visited {
  color: #6E6E73;
}

.emotion-39 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #545658;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-39 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-39 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<section
    aria-labelledby="related-content-heading"
    class="emotion-0 emotion-1 emotion-2"
    data-e2e="related-content-heading"
    dir="ltr"
    role="region"
  >
    <div
      class="emotion-3 emotion-4 emotion-2"
      dir="ltr"
    >
      <div
        class="emotion-6 emotion-7 emotion-8"
      >
        <h2
          class="emotion-9 emotion-10"
        >
          <span
            class="emotion-11 emotion-12"
          >
            <span
              class="emotion-13 emotion-14"
            >
              <span
                class="emotion-15 emotion-16"
                dir="ltr"
                id="related-content-heading"
              >
                Another thing we de for inside dis tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ul
        class="emotion-2 emotion-18 emotion-19"
        dir="ltr"
        role="list"
      >
        <li
          class="emotion-2 emotion-21 emotion-22"
          dir="ltr"
        >
          <div
            class="emotion-23 emotion-24"
            data-e2e="story-promo"
          >
            <div
              class="emotion-25 emotion-26"
              dir="ltr"
            >
              <div
                class="emotion-27 emotion-28"
              >
                <div
                  class="emotion-29"
                  style="padding-bottom: 56.25%;"
                >
                  <picture>
                    <img
                      alt="Kwesi and James dey check radio"
                      class="emotion-30"
                      height="549"
                      loading="lazy"
                      sizes="(max-width: 1008px) 33vw, 321px"
                      src="https://ichef.bbci.co.uk/news/660/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg"
                      srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 660w"
                      width="976"
                    />
                  </picture>
                </div>
                <div
                  class="emotion-31 emotion-32"
                />
              </div>
            </div>
            <div
              class="emotion-33 emotion-34"
              dir="ltr"
            >
              <h3
                class="emotion-35 emotion-36"
              >
                <a
                  aria-labelledby="promo-rel-content-pidgin44508901-1"
                  class="emotion-37 emotion-38"
                  href="/pidgin/44508901"
                >
                  <span
                    id="promo-rel-content-pidgin44508901-1"
                    role="text"
                  >
                    <span>
                      Meet boys who dey convert cassava to electricity
                    </span>
                  </span>
                </a>
              </h3>
              <time
                class="emotion-39 emotion-40"
                datetime="1970-01-18"
              >
                18th January 1970
              </time>
            </div>
          </div>
        </li>
        <li
          class="emotion-2 emotion-21 emotion-22"
          dir="ltr"
        >
          <div
            class="emotion-23 emotion-24"
            data-e2e="story-promo"
          >
            <div
              class="emotion-25 emotion-26"
              dir="ltr"
            >
              <div
                class="emotion-27 emotion-28"
              >
                <div
                  class="emotion-29"
                  style="padding-bottom: 56.25%;"
                >
                  <picture>
                    <img
                      alt="Electricity pole"
                      class="emotion-30"
                      height="549"
                      loading="lazy"
                      sizes="(max-width: 1008px) 33vw, 321px"
                      src="https://ichef.bbci.co.uk/news/660/cpsprodpb/6C4E/production/_105462772_lihht.jpg"
                      srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/6C4E/production/_105462772_lihht.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/6C4E/production/_105462772_lihht.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/6C4E/production/_105462772_lihht.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/6C4E/production/_105462772_lihht.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/6C4E/production/_105462772_lihht.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/6C4E/production/_105462772_lihht.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/6C4E/production/_105462772_lihht.jpg 660w"
                      width="976"
                    />
                  </picture>
                </div>
                <div
                  class="emotion-31 emotion-32"
                />
              </div>
            </div>
            <div
              class="emotion-33 emotion-34"
              dir="ltr"
            >
              <h3
                class="emotion-35 emotion-36"
              >
                <a
                  aria-labelledby="promo-rel-content-pidgintori46975713-2"
                  class="emotion-37 emotion-38"
                  href="/pidgin/tori-46975713"
                >
                  <span
                    id="promo-rel-content-pidgintori46975713-2"
                  >
                    How light companies dey use estimated billing show Nigerians pepper
                  </span>
                </a>
              </h3>
              <time
                class="emotion-39 emotion-40"
                datetime="1970-01-18"
              >
                18th January 1970
              </time>
            </div>
          </div>
        </li>
        <li
          class="emotion-2 emotion-21 emotion-22"
          dir="ltr"
        >
          <div
            class="emotion-23 emotion-24"
            data-e2e="story-promo"
          >
            <div
              class="emotion-25 emotion-26"
              dir="ltr"
            >
              <div
                class="emotion-27 emotion-28"
              >
                <div
                  class="emotion-29"
                  style="padding-bottom: 56.25%;"
                >
                  <picture>
                    <img
                      alt="40 watts bulbs"
                      class="emotion-30"
                      height="1080"
                      loading="lazy"
                      sizes="(max-width: 1008px) 33vw, 321px"
                      src="https://ichef.bbci.co.uk/news/660/cpsprodpb/20CE/production/_99389380_light108.jpg"
                      srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/20CE/production/_99389380_light108.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/20CE/production/_99389380_light108.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/20CE/production/_99389380_light108.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/20CE/production/_99389380_light108.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/20CE/production/_99389380_light108.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/20CE/production/_99389380_light108.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/20CE/production/_99389380_light108.jpg 660w"
                      width="1920"
                    />
                  </picture>
                </div>
                <div
                  class="emotion-31 emotion-32"
                />
              </div>
            </div>
            <div
              class="emotion-33 emotion-34"
              dir="ltr"
            >
              <h3
                class="emotion-35 emotion-36"
              >
                <a
                  aria-labelledby="promo-rel-content-pidgintori42494678-3"
                  class="emotion-37 emotion-38"
                  href="/pidgin/tori-42494678"
                >
                  <span
                    id="promo-rel-content-pidgintori42494678-3"
                  >
                    Nigeria: Wetin 5,222 megawatts electric fit do?
                  </span>
                </a>
              </h3>
              <time
                class="emotion-39 emotion-40"
                datetime="1970-01-18"
              >
                18th January 1970
              </time>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </section>
</DocumentFragment>
`;

exports[`CpsRelatedContent should render Story Promo components without <ul> when given single item in collection 1`] = `
<DocumentFragment>
  .emotion-1 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

.emotion-4 {
  margin-bottom: 1rem;
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-4 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-4 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-4 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-4 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-4 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-4 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    padding-bottom: 1.5rem;
    margin-bottom: 2rem;
  }
}

@media (max-width: 37.5rem) {
  .emotion-4 {
    padding-bottom: 2rem;
    margin-bottom: 1rem;
  }
}

.emotion-7 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-7 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    margin-top: 0;
  }
}

.emotion-9 {
  margin: 0;
  padding: 0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-13 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-15 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-15 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-15 {
    padding-right: 1rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-17 {
    padding-top: 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-17 {
    padding-bottom: 1.5rem;
  }
}

@supports (display: grid) {
  .emotion-19 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(1, 1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(1, 1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-19 {
      grid-template-columns: repeat(1, 1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(1, 1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-19 {
      grid-template-columns: repeat(2, 1fr);
      grid-column-end: span 2;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-19 {
      grid-template-columns: repeat(2, 1fr);
      grid-column-end: span 2;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-21 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-21 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-21 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-21 {
      display: block;
    }
  }
}

.emotion-23 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-23 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-23 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-25 {
  position: relative;
}

.emotion-27 {
  height: 0;
  overflow: hidden;
  position: relative;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
  background-color: #F2F2F2;
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
}

@media (min-width: 25rem) {
  .emotion-27 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-27 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-28 {
  width: 100%;
  height: auto;
  object-fit: cover;
}

@media (min-width: 25rem) {
  .emotion-29 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-29>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width: 24.9375rem) {
  .emotion-29>* {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-31 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-31 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-31 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-31 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-31 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-33 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-33 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-33 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-35 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-35:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-35:hover,
.emotion-35:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-35:visited {
  color: #6E6E73;
}

.emotion-37 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-37 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-37 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-37 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-37 {
    display: none;
    visibility: hidden;
  }
}

.emotion-39 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #545658;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-39 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-39 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<section
    aria-labelledby="related-content-heading"
    class="emotion-0 emotion-1 emotion-2"
    data-e2e="related-content-heading"
    dir="ltr"
    role="region"
  >
    <div
      class="emotion-3 emotion-4 emotion-2"
      dir="ltr"
    >
      <div
        class="emotion-6 emotion-7 emotion-8"
      >
        <h2
          class="emotion-9 emotion-10"
        >
          <span
            class="emotion-11 emotion-12"
          >
            <span
              class="emotion-13 emotion-14"
            >
              <span
                class="emotion-15 emotion-16"
                dir="ltr"
                id="related-content-heading"
              >
                Another thing we de for inside dis tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <div
        class="emotion-17 emotion-18"
      >
        <div
          class="emotion-19 emotion-2"
          dir="ltr"
        >
          <div
            class="emotion-21 emotion-22"
            data-e2e="story-promo"
          >
            <div
              class="emotion-23 emotion-24"
              dir="ltr"
            >
              <div
                class="emotion-25 emotion-26"
              >
                <div
                  class="emotion-27"
                  style="padding-bottom: 56.25%;"
                >
                  <picture>
                    <img
                      alt="Kwesi and James dey check radio"
                      class="emotion-28"
                      height="549"
                      loading="lazy"
                      sizes="(max-width: 1008px) 33vw, 321px"
                      src="https://ichef.bbci.co.uk/news/660/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg"
                      srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/C576/production/_102105505_p06bhwsd.jpg 660w"
                      width="976"
                    />
                  </picture>
                </div>
                <div
                  class="emotion-29 emotion-30"
                />
              </div>
            </div>
            <div
              class="emotion-31 emotion-32"
              dir="ltr"
            >
              <h3
                class="emotion-33 emotion-34"
              >
                <a
                  aria-labelledby="promo-pidgin44508901-1"
                  class="emotion-35 emotion-36"
                  href="/pidgin/44508901"
                >
                  <span
                    id="promo-pidgin44508901-1"
                    role="text"
                  >
                    <span>
                      Meet boys who dey convert cassava to electricity
                    </span>
                  </span>
                </a>
              </h3>
              <p
                class="emotion-37 emotion-38"
              >
                James den Kwesi Ansah want convert most of Ghana's cassava waste into cheap electricity supply for schools, hospitals den villages.
              </p>
              <time
                class="emotion-39 emotion-40"
                datetime="1970-01-18"
              >
                18th January 1970
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
